syntax = "proto3";

package api.qycms_bff.admin.v1;
import "google/api/annotations.proto";

option go_package = "github.com/iwinder/qingyucms/api/qycms_bff/admin/v1;v1";
option java_multiple_files = true;
option java_package = "api.qycms_bff.admin.v1";

service QyAdminFile {
	rpc CreateQyAdminFileLibType (CreateQyAdminFileLibTypeRequest) returns (UpdateQyAdminFileLibTypeReply){
		option (google.api.http) = {
			post: "/api/admin/v1/fileLibType",
			body:"*"
		};
	};
	rpc UpdateQyAdminFileLibType (UpdateQyAdminFileLibTypeRequest) returns (UpdateQyAdminFileLibTypeReply){
		option (google.api.http) = {
			put: "/api/admin/v1/fileLibType/{id}",
			body:"*"
		};
	};
	rpc ListQyAdminFileLibType (ListQyAdminFileLibTypeRequest) returns (ListQyAdminFileLibTypeReply){
		option (google.api.http) = {
			get: "/api/admin/v1/fileLibType",
		};
	};
	rpc DeleteQyAdminFileLibType (DeleteQyAdminFileLibTypeRequest) returns (DeleteQyAdminFileLibTypeReply){
		option (google.api.http) = {
			delete: "/api/admin/v1/fileLibType",
			body:"*"
		};
	}
	rpc CreateQyAdminFileLibConfig (CreateQyAdminFileLibConfigRequest) returns (CreateQyAdminFileLibConfigReply){
		option (google.api.http) = {
			post: "/api/admin/v1/fileLibConfig",
			body:"*"
		};
	};
//	rpc GetQyAdminFileLibConfigByType (GetQyAdminFileLibConfigRequest) returns (GetQyAdminFileLibConfigReply){
//		option (google.api.http) = {
//			get: "/api/admin/v1/fileLibConfig/byType/{id}",
//		};
//	};
	rpc GetQyAdminFileLibConfig (GetQyAdminFileLibConfigRequest) returns (GetQyAdminFileLibConfigReply){
		option (google.api.http) = {
			get: "/api/admin/v1/fileLibConfig/{typeId}",
		};
	};
	rpc CreateQyAdminFile (CreateQyAdminFileRequest) returns (CreateQyAdminFileReply);
	rpc UpdateQyAdminFile (UpdateQyAdminFileRequest) returns (UpdateQyAdminFileReply);
	rpc DeleteQyAdminFile (DeleteQyAdminFileRequest) returns (DeleteQyAdminFileReply);
	rpc GetQyAdminFile (GetQyAdminFileRequest) returns (GetQyAdminFileReply);
	rpc ListQyAdminFile (ListQyAdminFileRequest) returns (ListQyAdminFileReply);
}

message FilePageInfo {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
}

message FileLibTypeResponse {
	uint64 id = 1;
	string name = 2;
	int32 identifier = 3;
	string type = 4;
	int32 statusFlag =5;
}
message CreateQyAdminFileLibTypeRequest {
	string name = 2;
	int32 identifier = 3;
	string type = 4;
	int32 statusFlag =5;
}
message UpdateQyAdminFileLibTypeRequest {
	uint64 id = 1;
	string name = 2;
	int32 identifier = 3;
	string type = 4;
	int32 statusFlag =5;
}
message UpdateQyAdminFileLibTypeReply {
	uint64 id = 1;
}
message DeleteQyAdminFileLibTypeRequest {
	repeated uint64 ids = 1;
}
message DeleteQyAdminFileLibTypeReply {
}
message ListQyAdminFileLibTypeRequest {
	int64 current = 1;
	int64 pageSize = 2;
	int64 total = 3;
	int64 pages = 4;
	bool firstFlag = 5;
	bool lastFlag = 6;
	string name = 7;
	int32 statusFlag = 8;
}
message ListQyAdminFileLibTypeReply {
	FilePageInfo pageInfo = 1;
	repeated FileLibTypeResponse items = 2;
}


message CreateQyAdminFileLibConfigRequest {
	uint64 id = 1;
	string accessKey = 2;
	string secretKey = 3;
	string bucket    = 4;
	string prefix    = 5;
	string domain   = 6;
	string endpoint  = 7;
	uint64 typeId    = 8;
}
message CreateQyAdminFileLibConfigReply {
	uint64 id = 1;
	uint64 typeId    = 2;
}
message GetQyAdminFileLibConfigRequest {
	uint64 id = 1;
	uint64 typeId    = 2;
}
message GetQyAdminFileLibConfigReply {
	uint64 id = 1;
	string accessKey = 2;
	string secretKey = 3;
	string bucket    = 4;
	string prefix    = 5;
	string domain   = 6;
	string endpoint  = 7;
	uint64 typeId    = 8;
}

message CreateQyAdminFileRequest {}
message CreateQyAdminFileReply {}

message UpdateQyAdminFileRequest {}
message UpdateQyAdminFileReply {}

message DeleteQyAdminFileRequest {}
message DeleteQyAdminFileReply {}

message GetQyAdminFileRequest {}
message GetQyAdminFileReply {}

message ListQyAdminFileRequest {}
message ListQyAdminFileReply {}