syntax = "proto3";

package api.qycms_user.v1;

import "google/api/annotations.proto";

option go_package = "github.com/iwinder/qingyucms/api/qycms_user/v1;v1";
option java_multiple_files = true;
option java_package = "api.qycms_user.v1";

// 用户管理服务
service User {
	// 创建新用户
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply){
		option (google.api.http) = {
			post: "/api/v1/admin/user",
			body:"*"
		};
	}
	// 更新用户
	rpc UpdateUser (UpdateUserRequest) returns (UpdateUserReply){
//		option (google.api.http) = {
//			put: "/api/v1/admin/user/{uid}",
//			body:"*"
//		};
	};
	// 删除
	rpc DeleteUser (DeleteUserRequest) returns (DeleteUserReply){
//		option (google.api.http) = {
//			delete: "/api/v1/admin/user/{uid}"
//		};
	};
	// 批量删除
	rpc DeleteUsers (DeleteUsersRequest) returns (DeleteUsersReply){
//		option (google.api.http) = {
//			delete: "/api/v1/admin/user"
//		};
	};
	// 获取用户信息
	rpc GetUser (GetUserRequest) returns (GetUserReply){
//		option (google.api.http) = {
//			get: "/api/v1/admin/user/{uid}"
//		};
	}

	// 获取用户信息
	rpc GetMyInfo (GetMyInfoRequest) returns (GetUserReply){
				option (google.api.http) = {
					get: "/api/v1/admin/myInfo"
				};
	}

	// 批量获取用户
	rpc ListUser (ListUserRequest) returns (ListUserReply){
		option (google.api.http) = {
			get: "/api/v1/admin/user"
		};
	};

	// 验证密码用于登录
	rpc VerifyPassword(VerifyPasswordReq) returns (VerifyPasswordReply) {
	}
}





message UserInfoResponse {
	uint64 uid = 1;
	string username = 2;
	string nickName = 3;
	string avatar = 4;
	string email = 5;
	string phone = 6;
}

message PageInfo {
	uint64 page = 1;
	uint64 size = 2;
	uint64 total = 3;
	uint64 pages = 4;
	bool firstFlag = 5;
	bool LastFlag = 6;
}



message CreateUserRequest {
	string username = 1;
	string password = 2;
	string nickName = 3;
	string avatar = 4;
	string email = 5;
	string phone = 6;
}

message CreateUserReply {
	UserInfoResponse user = 1;
}

message UpdateUserRequest {
	uint64 uid = 1;
	string username = 2;
	string nickName = 3;
	string avatar = 4;
	string email = 5;
	string phone = 6;
}
message UpdateUserReply {
	UserInfoResponse user = 1;
}

message DeleteUserRequest {
	uint64 uid = 1;
}
message DeleteUserReply {
	uint64 uid = 1;
}

message DeleteUsersRequest {
	repeated uint64 uids = 1;
}
message DeleteUsersReply {
}

message GetUserRequest {
	uint64 uid = 1;
}
message GetUserReply {
	UserInfoResponse user = 1;
}

message		GetMyInfoRequest {

	}

message ListUserRequest {
	PageInfo pageInfo = 1;
	string username = 2;
	string nickName = 3;
}

message ListUserReply {
	PageInfo pageInfo = 1;
	repeated UserInfoResponse items = 2;
}

message VerifyPasswordReq {
	string username = 1;
	string password = 2;
}

message VerifyPasswordReply {
	bool ok = 1;
	int64 id = 2;
}